add GioWriter
and define for CJ and GML